--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ googleapis-common-protos==1.63.0
 greenlet==3.0.3
 grpcio==1.62.2
 grpcio-status==1.62.2
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httplib2==0.22.0
