--- a/fact-flow/package.json
+++ b/fact-flow/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.75.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
